app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx-con
        image: 176381617529.dkr.ecr.ap-northeast-2.amazonaws.com/app2:2
